--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,13 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: amyhua
+email: foramyhua@gmail.com
+description: "Amy Hua: developer, data geek, ideas person."
 baseurl: ""
-url: "http://yourdomain.com"
+url: "http://amyhua.me"
+twitter: 'amyhuaster'
+github: 'amyhua'
 
 # Build settings
 markdown: kramdown
 permalink: pretty
+gems: [sass]
